[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/game/Result.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/ui.sprites/Bg.tres" type="Texture" id=2]
[ext_resource path="res://assets/ui/ui.sprites/LeftArrow.tres" type="Texture" id=3]
[ext_resource path="res://assets/ui/ui.sprites/EmptyBtn4.tres" type="Texture" id=4]
[ext_resource path="res://assets/ui/ui.sprites/Continue2.tres" type="Texture" id=5]
[ext_resource path="res://assets/ui/ui.sprites/EmptyBtn3.tres" type="Texture" id=6]
[ext_resource path="res://theme/score_font.tres" type="Theme" id=7]
[ext_resource path="res://scenes/common/BaseButton.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "init"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -500 ), Vector2( 0, 0 ) ]
}

[node name="Result" type="Node2D"]
z_index = 100
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 716.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="Panel"]
position = Vector2( 204.5, 376 )
scale = Vector2( 1.52143, 3.42029 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="Panel"]
margin_left = 114.0
margin_top = 269.0
margin_right = 154.0
margin_bottom = 309.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Control"]
margin_right = 189.0
margin_bottom = 169.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Panel/Control/VBoxContainer"]
margin_right = 189.0
margin_bottom = 33.0
theme = ExtResource( 7 )
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Panel/Control/VBoxContainer"]
margin_top = 37.0
margin_right = 189.0
margin_bottom = 70.0
theme = ExtResource( 7 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScoreLabel" type="Label" parent="Panel/Control/VBoxContainer"]
margin_top = 74.0
margin_right = 189.0
margin_bottom = 107.0
theme = ExtResource( 7 )
text = "Best Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScore" type="Label" parent="Panel/Control/VBoxContainer"]
margin_top = 111.0
margin_right = 189.0
margin_bottom = 144.0
theme = ExtResource( 7 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Control/VBoxContainer"]
margin_top = 148.0
margin_right = 189.0
margin_bottom = 206.0
custom_constants/separation = 60
alignment = 1

[node name="BackButton" parent="Panel/Control/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 6.0
margin_right = 64.0
margin_bottom = 58.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )

[node name="ReplayButton" parent="Panel/Control/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 124.0
margin_right = 182.0
margin_bottom = 58.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/init = SubResource( 2 )

[connection signal="pressed" from="Panel/Control/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Panel/Control/VBoxContainer/HBoxContainer/ReplayButton" to="." method="_on_ReplayButton_pressed"]
